[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Ruidy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
